# bank_agnet

./: .dockerignore  .env.example  .env.prod.example  .gitignore  ACCEPTANCE.md  CODE_PATH_REPORT.md  Dockerfile  PROJECT_READING_GUIDE.md  docker-compose.dev.yml  docker-compose.prod.secure.yml  docker-compose.prod.yml  docker-compose.yml  project_demo.py  pyproject.toml
.agents/shared/: bootstrap.py  concept_utils.py  io_utils.py  path_utils.py  project_indexer.py
.artifacts/code-path-explainer/: symbols.json
.artifacts/project-reading-coach/: concepts_classified.json  concepts_raw.json
data/runtime/: diagnosis.db
data/sample/: incidents.json  xuelang_changes.jsonl  zabbix_alerts.jsonl
demotest/: __init__.py  demo_runtime.db  run_demotest.ps1
demotest/app/: __init__.py  db.py  main.py  react_tools.py  settings.py  worker.py
demotest/docs/: RUNBOOK.md
docs/: ACCEPTANCE.md  CODE_COMMENT_GUIDE.md  DOCKER_DEPLOY.md  PROJECT_READING_GUIDE.md  README.md  spec.md
docs/learning/: 00_EXECUTIVE_SUMMARY.md  01_PROJECT_MAP.md  02_STARTUP_FLOW.md  03_REQUEST_FLOW.md  04_KNOWLEDGE_GAP.md  05_MINI_SKELETON_PLAN.md  06_MASTERY_TRACKER.md  07_QUESTION_BANK.md  08_FINAL_PROJECT_REVIEW.md  (+3 more)
flinksql/: 01_sources.sql  02_incident_aggregation.sql  03_task_sink_postgres.sql  04_doris_sink.sql
scripts/: run_worker_once.py  seed_incidents.py
sql/: postgres_schema.sql
tests/: test_control_center.py  test_demotest_flow.py  test_langgraph_react_cot.py  test_langgraph_react_memory.py  test_mcp_client.py  test_runtime_flow.py  test_task_store.py  test_worker_runner.py
(+81 files in other folders)
