[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hz-bank-aiops-incident"
version = "1.0.0"
description = "Flink + Doris + LLM Agent intelligent O&M incident diagnosis platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
langgraph = [
  "langgraph>=0.2.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
hz-aiops-api = "hz_bank_aiops.api.main:run"
hz-aiops-worker = "hz_bank_aiops.worker.runner:run_worker_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
